Add extra confirmations to deleting volumes/datasets and extra objects and fix the data leak with extra item checkboxes
Ticket: #22728

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -52,7 +52,8 @@
             "bindings": {
                 "context": {"<-": "@owner.context"},
                 "isLoading": {"<-": "!@owner.object"},
-                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"}
+                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"},
+                "extraDeleteMessage": {"<-": "@owner.extraDeleteMessage"}
             }
         },
         "name": {
