--- a/ui/sections/accounts/inspectors/user.reel/user.html
+++ b/ui/sections/accounts/inspectors/user.reel/user.html
@@ -37,7 +37,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "controller": {"@": "owner"},
-                "validationController": {"@": "validationController"}
+                "validationController": {"@": "validationController"},
+                "extraDeleteMessage": "I am sure that I wish to delete this user and its home directory and/or group"
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
