--- a/ui/sections/storage/inspectors/replication.reel/replication.html
+++ b/ui/sections/storage/inspectors/replication.reel/replication.html
@@ -38,7 +38,8 @@
                     "name",
                     "dataset"
                 ],
-                "controller": {"@": "owner"}
+                "controller": {"@": "owner"},
+                "extraDeleteMessage": "I am sure that I wish to delete this replication and its associated calendar task"
             },
             "bindings": {
                 "isLoading": {"<-": "@owner.isLoading"},
