Display disks removed from topology as available
Ticket: #22371

--- a/ui/sections/storage/inspectors/topology.reel/topology.html
+++ b/ui/sections/storage/inspectors/topology.reel/topology.html
@@ -53,7 +53,8 @@
             "prototype": "ui/sections/storage/inspectors/available-disks.reel",
             "properties": {
                 "element": {"#": "availableDisks"},
-                "topology": {"@": "topology"}
+                "topology": {"@": "topology"},
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "disks": {"<-": "@owner.availableDisks"},
