Revert "Merge branch 'master' into secret_stable"
This reverts commit c273a7bd757e438f235d6dbfef95038363def763, reversing
changes made to 246ec40ac3156f6a7f3d3403408ed9212c90d631.

--- a/ui/controls/foldable-section.reel/foldable-section.html
+++ b/ui/controls/foldable-section.reel/foldable-section.html
@@ -43,16 +43,14 @@
 </head>
 <body>
     <div data-montage-id="owner" class="FoldableSection">
-        <div data-montage-id="expandButton" class="FoldableSection-expand">
-            <div class="FoldableSection-expand-icon">
-                <svg>
-                    <use xlink:href="#i-triangle-down"/>
-                </svg>
-            </div>
+        <button data-montage-id="expandButton" class="FoldableSection-expand">
+            <svg>
+                <use xlink:href="#i-triangle-down"/>
+            </svg>
             <div class="FoldableSection-expand-titles">
                 <div data-montage-id="sectionTitle"></div>
             </div>
-        </div>
+        </button>
         <div data-montage-id="sectionContent" class="FoldableSection-content">
             <div data-montage-id="contentContainer" class="FoldableSection-contentContainer">
                 <div data-param="*"></div>
