--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -52,8 +52,7 @@
             "bindings": {
                 "context": {"<-": "@owner.context"},
                 "isLoading": {"<-": "!@owner.object"},
-                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"},
-                "extraDeleteMessage": {"<-": "@owner.extraDeleteMessage"}
+                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"}
             }
         },
         "name": {
