--- a/ui/inspectors/service.reel/afp-service.reel/afp-service.html
+++ b/ui/inspectors/service.reel/afp-service.reel/afp-service.html
@@ -72,6 +72,7 @@
             "properties": {
                 "element": {"#": "guest_user"},
                 "label": "Guest User",
+                "labelPath": "username",
                 "valuePath": "username"
             },
             "bindings": {
