--- a/ui/sections/accounts/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
@@ -72,13 +72,13 @@
                 "element": {"#": "encryption"},
                 "label": "Encryption",
                 "options": [
-                    "OFF",
+                    "NONE",
                     "SSL",
                     "TLS"
                 ]
             },
             "bindings": {
-                "selectedValue": {"<->": "@owner.object.parameters.encryption"}
+                "selectedValue": {"<->": "@owner.object.properties.encryption"}
             }
         },
 
