--- a/ui/sections/storage/inspectors/replication.reel/replication.html
+++ b/ui/sections/storage/inspectors/replication.reel/replication.html
@@ -38,8 +38,7 @@
                     "name",
                     "dataset"
                 ],
-                "controller": {"@": "owner"},
-                "extraDeleteMessage": "I am sure that I wish to delete this replication and its associated calendar task"
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "isLoading": {"<-": "@owner.isLoading"},
