--- a/ui/sections/storage/inspectors/share.reel/nfs-share.reel/nfs-share.html
+++ b/ui/sections/storage/inspectors/share.reel/nfs-share.reel/nfs-share.html
@@ -56,6 +56,7 @@
             "properties": {
                 "element": {"#": "maprootUser"},
                 "label": "Maproot user",
+                "labelPath": "username",
                 "valuePath": "username"
             },
             "bindings": {
@@ -67,6 +68,7 @@
             "properties": {
                 "element": {"#": "maprootGroup"},
                 "label": "Maproot group",
+                "labelPath": "name",
                 "valuePath": "name"
             },
             "bindings": {
