--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset-permissions.reel/volume-dataset-permissions.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset-permissions.reel/volume-dataset-permissions.html
@@ -32,6 +32,7 @@
             "properties": {
                 "element": {"#": "ownerUser"},
                 "label": "Owner user",
+                "labelPath": "username",
                 "valuePath": "username"
             },
             "bindings": {
@@ -43,6 +44,7 @@
             "properties": {
                 "element": {"#": "ownerGroup"},
                 "label": "Owner group",
+                "labelPath": "name",
                 "valuePath": "name"
             },
             "bindings": {
