--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -30,9 +30,7 @@
                 "controller": {"@": "owner"},
                 "validationController": {"@": "validationController"},
                 "canRevert": true,
-                "canSave": true,
-                "needsExtraConfirm": true,
-                "extraDeleteMessage": "I am sure that I wish to delete my dataset and all the data on it"
+                "canSave": true
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
