--- a/ui/sections/system/inspectors/boot-pool.reel/boot-pool.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-pool.html
@@ -29,7 +29,7 @@
                 "element": {"#": "inspector"},
                 "validationController": {"@": "validationController"},
                 "controller": {"@": "owner"},
-                "isFooterHidden": false
+                "isFooterHidden": true
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
