--- a/ui/controls/search-groups-multiple.reel/search-groups-multiple.html
+++ b/ui/controls/search-groups-multiple.reel/search-groups-multiple.html
@@ -16,11 +16,12 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "values": {"<->": "@owner.values"},
+                "values": {"<->": "@owner.entries"},
                 "label": {"<-": "@owner.label"},
                 "disabled": {"<-": "@owner.disabled"},
                 "isLoading": {"<-": "@owner.isLoading"},
                 "initialOptions": {"<-": "@owner.initialOptions"},
+                "labelExpression": {"<-": "@owner.labelExpression"},
                 "hasNoneButton": {"<-": "@owner.hasNoneButton"},
                 "labelPath": {"<-": "@owner.labelPath"},
                 "valuePath": {"<-": "@owner.valuePath"},
