--- a/ui/inspectors/service.reel/smb-service.reel/smb-service.html
+++ b/ui/inspectors/service.reel/smb-service.reel/smb-service.html
@@ -108,6 +108,7 @@
             "properties": {
                 "element": {"#": "guestUser"},
                 "label": "Guest account",
+                "labelPath": "username",
                 "valuePath": "username"
             },
             "bindings": {
