--- a/ui/sections/storage/inspectors/share.reel/share.html
+++ b/ui/sections/storage/inspectors/share.reel/share.html
@@ -66,8 +66,7 @@
                 "isSaveDisabled": {"<-": "(@owner.targetType == 'ZVOL' && !@owner.object.properties.size)"},
                 "context": {"<-": "@owner.context"},
                 "isLoading": {"<-": "@owner.isLoading"},
-                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"},
-                "extraDeleteMessage": {"<-": "@owner.extraDeleteMessage"}
+                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"}
             }
         },
         "overview": {
@@ -144,8 +143,7 @@
             },
             "bindings": {
                 "moduleId": {"<-": "@owner._montage_metadata.moduleId + '/' + @owner.object.type + '-share.reel'"},
-                "object": {"<-": "@owner.object"},
-                "context": {"<-": "@owner.context"}
+                "object": {"<-": "@owner.object"}
             }
         },
         "targetTypeSelect": {
