--- a/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device.html
+++ b/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device.html
@@ -64,7 +64,7 @@
             },
             "bindings": {
                 "value": {"<-": "@owner.object.status"},
-                "classList.has('hide')": {"<-": "@owner.object._isNew"}
+                "isHidden": {"<-": "@owner.object._isNew"}
             }
         },
         "deviceTypePlaceholder": {
