--- a/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
+++ b/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
@@ -37,7 +37,6 @@
             "properties": {
                 "element": {"#": "user"},
                 "label": "User",
-                "labelPath": "username",
                 "valuePath": "username"
             },
             "bindings": {
@@ -81,7 +80,8 @@
                 "label": "Remote path (destination)"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.0.remote_path"}
+                "value": {"<->": "@owner.object.0.remote_path"},
+                "classList.has('hide')": {"<-": "@owner.object.0.rsync_mode != 'SSH'"}
             }
         },
         "portValidator": {
@@ -98,8 +98,17 @@
                 "validator": {"@": "portValidator"}
             }
         },
+        "remoteSubstitution": {
+            "prototype": "montage/ui/substitution.reel",
+            "properties": {
+                "element": {"#": "remoteSubstitution"}
+            },
+            "bindings": {
+                "switchValue": {"<-": "@owner.object.0.rsync_mode"}
+            }
+        },
         "remotePort": {
-            "prototype": "core/converter/validator/integer-floor-validator",
+            "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "remotePort"},
                 "label": "Remote ssh port",
@@ -228,8 +237,10 @@
         <div data-montage-id="remoteUser"></div>
         <div data-montage-id="remoteHost"></div>
         <div data-montage-id="remotePath"></div>
-        <div data-montage-id="remotePort"></div>
-        <div data-montage-id="remoteModule"></div>
+        <div data-montage-id="remoteSubstitution">
+            <div data-montage-id="remotePort" data-arg="SSH"></div>
+            <div data-montage-id="remoteModule" data-arg="MODULE"></div>
+        </div>
         <div class="RsyncProperties">
             <div data-montage-id="rsyncPropertiesTitle"></div>
             <div data-montage-id="archive"></div>
