DELETED: optional value as none in SMB protocol

--- a/ui/inspectors/service.reel/smb-service.reel/smb-service.html
+++ b/ui/inspectors/service.reel/smb-service.reel/smb-service.html
@@ -168,8 +168,7 @@
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "minProtocol"},
-                "label": "Server minimum protocol",
-                "hasOptionalValue": true
+                "label": "Server minimum protocol"
             },
             "bindings": {
                 "selectedValue": {"<->": "@owner.object.min_protocol"},
