--- a/ui/inspectors/service.reel/smb-service.reel/smb-service.html
+++ b/ui/inspectors/service.reel/smb-service.reel/smb-service.html
@@ -188,6 +188,16 @@
                 "options": {"<-": "@owner.PROTOCOLS"}
             }
         },
+        "auxiliary": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "auxiliary"},
+                "label": "Auxiliary"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.auxiliary"}
+            }
+        },
         "executeAlways": {
             "prototype": "blue-shark/ui/field-checkbox.reel",
             "properties": {
@@ -247,6 +257,7 @@
         <div data-montage-id="hostLookup"></div>
         <div data-montage-id="minProtocol"></div>
         <div data-montage-id="maxProtocol"></div>
+        <div data-montage-id="auxiliary"></div>
         <div data-montage-id="executeAlways"></div>
         <div data-montage-id="obeyPamRestrictions"></div>
         <div data-montage-id="bindAddresses"></div>
