Make directory service config deletable
Ticket: #22400

--- a/ui/sections/accounts/inspectors/directory-services.reel/directory-service.reel/directory-service.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/directory-service.reel/directory-service.html
@@ -25,11 +25,7 @@
         },
 
         "validationController": {
-            "prototype": "core/controller/validation-controller",
-            "properties": {
-                "fields": {
-                }
-            }
+            "prototype": "core/controller/validation-controller"
         },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
@@ -38,6 +34,7 @@
                 "validationController": {"@": "validationController"},
                 "canRevert":    true,
                 "canSave":      true,
+                "canDelete":      true,
                 "controller":   {"@": "owner"}
             },
             "bindings": {
