Connect the save and revert actions of the directory-services inspector

--- a/ui/sections/accounts/inspectors/directory-services.reel/directory-services.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/directory-services.html
@@ -24,7 +24,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "title": "Directory services",
-                "isFooterHidden": true
+                "isFooterHidden": true,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "isLoading": {"<-": "@owner.object.isLoading"}
