Fix default host selection on container creation
Ticket: #23102

--- a/blue-shark/ui/tables/table-editable.info/sample/ui/table-new-row.reel/table-new-row.html
+++ b/blue-shark/ui/tables/table-editable.info/sample/ui/table-new-row.reel/table-new-row.html
@@ -15,7 +15,7 @@
         },
 
         "errorController": {
-            "prototype": "blue-shark/core/error-controller",
+            "prototype": "core/error-controller",
             "properties": {
                 "form": {"@": "owner"}
             }
