--- a/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
+++ b/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
@@ -71,7 +71,7 @@
             }
         },
         "errorController": {
-            "prototype": "blue-shark/core/error-controller",
+            "prototype": "core/error-controller",
             "properties": {
                 "form": {"@": "owner"}
             }
